fix: set headline1 right padding to 25px and person z-index to 1

--- a/style.css
+++ b/style.css
@@ -45,6 +45,7 @@ body {
   width: 577px;
   height: 775px;
   overflow: hidden;
+  z-index: 1;
 }
 
 .fv__person img {
@@ -118,7 +119,7 @@ body {
 }
 
 .fv__headline--full {
-  padding: 10px 15px 10px 25px;
+  padding: 10px 25px 10px 25px;
   overflow: hidden;
 }
 
